# llm-fusion

./: .gitignore  README.md
.claude-plugin/: marketplace.json
plugins/llm-fusion/: CHANGELOG.md  README.md  agents.yaml  pyproject.toml
plugins/llm-fusion/.claude-plugin/: plugin.json
plugins/llm-fusion/council_runner/: __init__.py  cli.py  core.py  flows.py  orchestrator.py  sandbox.py
plugins/llm-fusion/council_runner/adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py  grok.py
plugins/llm-fusion/prompts/: auditor.md  executor.md  judge_advise.md  judge_execute_spec.md  round1_advise.md  round1_execute.md
plugins/llm-fusion/roles/: architect.md  builder.md  first-principles.md  operator.md  pragmatist.md  realist.md  skeptic.md  user-advocate.md
plugins/llm-fusion/skills/fusion-build/: SKILL.md
plugins/llm-fusion/skills/fusion-council/: SKILL.md
plugins/llm-fusion/tests/: test_config_prompts.py  test_core.py  test_sandbox_escape.py
