[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-fusion"
version = "1.2.0"
description = "Sealed multi-model LLM council runner (claude/codex/gemini), advise + execute."
requires-python = ">=3.11"
dependencies = []                 # zero runtime deps; PyYAML used only if present

[project.optional-dependencies]
yaml = ["PyYAML>=6"]              # optional; a bundled subset loader covers agents.yaml without it

[tool.setuptools]
packages = ["council_runner", "council_runner.adapters"]
